log
Thu 16 May 2024 07:52:52 PM UTC: 
 tests:  0|5
total_score: 0/70
3322fe7
Thu 16 May 2024 08:05:20 PM UTC: 
 sudoku.c | 54 +++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 51 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
1594cfe
Thu 16 May 2024 08:17:20 PM UTC: 
 sudoku.c | 73 ++++++++++++++++++++++++++++++++++++++--------------------------
 1 file changed, 44 insertions(+), 29 deletions(-)
 tests:  3|4
total_score: 20/70
9710328
Thu 16 May 2024 08:25:27 PM UTC: 
 sudoku.c | 33 +++++++++++++++++++--------------
 1 file changed, 19 insertions(+), 14 deletions(-)
 tests:  6|2
total_score: 45/70
53ff5df
Sat 18 May 2024 11:39:21 PM UTC: 
 sudoku.c | 76 ++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 48 insertions(+), 28 deletions(-)
 tests:  7|1
total_score: 55/70
3144525
Sat 18 May 2024 11:44:34 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
test.c: In function ‘DFS’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ad34efc
Sat 18 May 2024 11:44:57 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:176:5: error: ‘main’ is normally a non-static function [-Werror=main]
  176 | int main( int argc, char *argv[] ){
      |     ^~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:245:5: error: redefinition of ‘main’
In file included from test.c:5:
sudoku.c:176:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  176 | int main( int argc, char *argv[] ){
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c:176:5: error: ‘main’ defined but not used [-Werror=unused-function]
  176 | int main( int argc, char *argv[] ){
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
327bb58
